--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-pathjs-charts-expo",
-  "version": "0.0.34",
+  "version": "0.0.34-1",
   "description": "Cross platform React Native charting library based on path-js and react-native-svg that asumes the react-native-svg dependency from expo",
   "repository": {
     "type": "git",
@@ -14,7 +14,6 @@
   },
   "keywords": [
     "react-native",
-    "react-native-svg",
     "expo",
     "paths-js",
     "react-pathjs-chart",
@@ -24,6 +23,7 @@
   "author": "Nicolas Padula",
   "license": "Apache-2.0",
   "dependencies": {
+    "expo": "^30.0.1",
     "lodash": "^4.12.0",
     "paths-js": "^0.4.5"
   },
@@ -33,9 +33,10 @@
     "diff": "^3.1.0",
     "jest": "*",
     "jest-react-native": "*",
+    "prop-types": "^15.6.2",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-native": "0.50.3",
+    "react-native": "0.55.4",
     "react-test-renderer": "16.0.0"
   },
   "jest": {
