--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-pathjs-charts-expo",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Cross platform React Native charting library for expo based on react-native-pathjs-charts 0.0.34",
   "repository": {
     "type": "git",
@@ -24,8 +24,8 @@
   "author": "Nicolas Padula",
   "license": "Apache-2.0",
   "dependencies": {
-    "expo": "^30.0.1",
-    "lodash": "^4.12.0",
+    "expo": "^27.0.1",
+    "lodash": "^4.17.11",
     "paths-js": "^0.4.5"
   },
   "devDependencies": {
@@ -35,9 +35,8 @@
     "jest": "*",
     "jest-react-native": "*",
     "prop-types": "^15.6.2",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-native": "0.55.4",
+    "react": "16.3.1",
+    "react-native": "~0.55.2",
     "react-test-renderer": "16.0.0"
   },
   "jest": {
